# metaclean

./: .gitignore  PKGBUILD  README.md  metaclean.desktop  pyproject.toml
.github/workflows/: python-install.yml
metaclean/: __main__.py
metaclean/core/: exiftool.py  gui.py  options.py  process.py
metaclean/data/: options.json
