[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaclean"
version = "0.1.0"
description = "App to clean metadata from multiple images"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "GPL-3.0"
authors = [
    {name = "simon0302010", email = "simon0302010@gmail.com"}
]
dependencies = [
    "PyQt5"
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]

[project.optional-dependencies]
dev = ["build", "twine", "ruff"]

[project.urls]
Homepage = "https://github.com/simon0302010/metaclean"

[project.scripts]
metaclean = "metaclean.__main__:main"